[package]
name = "rotaro-node"
version = "0.1.0"
authors = ["Kristoffer Berdal <web@flexd.net>"]
edition = "2018"
default-run = "client"


[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version = "0.2", features = ["full"] }
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
